App list: Fixed folder reparenting calculation.

Doesn't have any visible effect but it fixes an assumption that will
soon not be true (that the root grid view and folder view are at the
same location).

BUG=599328

Review URL: https://codereview.chromium.org/1846683004

Cr-Commit-Position: refs/heads/master@{#384198}

Former-commit-id: 5319c96ce234793b9ae72a914ef5bb2e12ca8ca1